--- a/_modules/ramonak/stopwords.html
+++ b/_modules/ramonak/stopwords.html
@@ -252,11 +252,7 @@
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">ramonak.packages.actions</span><span class="w"> </span><span class="kn">import</span> <span class="n">require</span>
 
-<span class="n">STOP_WORDS</span> <span class="o">=</span> <span class="p">(</span>
-    <span class="p">(</span><span class="n">require</span><span class="p">(</span><span class="s2">&quot;@alerus/stopwords&quot;</span><span class="p">)</span> <span class="o">/</span> <span class="s2">&quot;belarusian.txt&quot;</span><span class="p">)</span>
-    <span class="o">.</span><span class="n">read_text</span><span class="p">(</span><span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">)</span>
-    <span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
-<span class="p">)</span>
+<span class="n">STOP_WORDS</span> <span class="o">=</span> <span class="p">(</span><span class="n">require</span><span class="p">(</span><span class="s2">&quot;@alerus/stopwords&quot;</span><span class="p">)</span> <span class="o">/</span> <span class="s2">&quot;belarusian.txt&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">read_text</span><span class="p">(</span><span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
 
 
 <div class="viewcode-block" id="clean_stop_words">
