--- a/_modules/ramonak/exceptions.html
+++ b/_modules/ramonak/exceptions.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ramonak.exceptions &#8212; ramonak 0.4.0 documentation</title>
+    <title>ramonak.exceptions &#8212; ramonak 0.4.1 documentation</title>
   
   
   
@@ -38,7 +38,7 @@
   <link rel="preload" as="script" href="../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
-    <script src="../../_static/documentation_options.js?v=2375ead9"></script>
+    <script src="../../_static/documentation_options.js?v=988968c4"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
@@ -124,7 +124,7 @@
   
   
   
-    <p class="title logo__title">ramonak 0.4.0 documentation</p>
+    <p class="title logo__title">ramonak 0.4.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -252,18 +252,14 @@
 <div class="viewcode-block" id="RamonakError">
 <a class="viewcode-back" href="../../ramonak.html#ramonak.exceptions.RamonakError">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">RamonakError</span><span class="p">(</span><span class="ne">Exception</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Базавы клас для ўсіх выключэнняў ramonak.&quot;&quot;&quot;</span>
-
-    <span class="k">pass</span></div>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Базавы клас для ўсіх выключэнняў ramonak.&quot;&quot;&quot;</span></div>
 
 
 
 <div class="viewcode-block" id="RamonakPackageManagerError">
 <a class="viewcode-back" href="../../ramonak.html#ramonak.exceptions.RamonakPackageManagerError">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">RamonakPackageManagerError</span><span class="p">(</span><span class="n">RamonakError</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Агульны клас для ўсіх выключэнняў менеджэра пакетаў.&quot;&quot;&quot;</span>
-
-    <span class="k">pass</span></div>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Агульны клас для ўсіх выключэнняў менеджэра пакетаў.&quot;&quot;&quot;</span></div>
 
 </pre></div>
 
