--- a/_modules/ramonak/packages/actions.html
+++ b/_modules/ramonak/packages/actions.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ramonak.packages.actions &#8212; ramonak 0.4.0 documentation</title>
+    <title>ramonak.packages.actions &#8212; ramonak 0.4.1 documentation</title>
   
   
   
@@ -38,7 +38,7 @@
   <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
 <link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
-    <script src="../../../_static/documentation_options.js?v=2375ead9"></script>
+    <script src="../../../_static/documentation_options.js?v=988968c4"></script>
     <script src="../../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
@@ -124,7 +124,7 @@
   
   
   
-    <p class="title logo__title">ramonak 0.4.0 documentation</p>
+    <p class="title logo__title">ramonak 0.4.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -304,7 +304,7 @@
 
     <span class="k">if</span> <span class="n">_local_package_exists</span><span class="p">(</span><span class="n">package_id</span><span class="p">):</span>
         <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Already satisfied&quot;</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">package_path</span>
+        <span class="k">return</span> <span class="n">package_path</span><span class="o">.</span><span class="n">resolve</span><span class="p">()</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Downloading...&quot;</span><span class="p">)</span>
 
     <span class="n">file_url</span> <span class="o">=</span> <span class="n">_retrieve_package_url</span><span class="p">(</span><span class="n">package_author</span><span class="p">,</span> <span class="n">package_name</span><span class="p">,</span> <span class="n">package_version</span><span class="p">)</span>
@@ -316,7 +316,7 @@
 
     <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;The package &#39;</span><span class="si">{</span><span class="n">package_author</span><span class="si">}</span><span class="s2">/</span><span class="si">{</span><span class="n">package_name</span><span class="si">}</span><span class="s2">==</span><span class="si">{</span><span class="n">package_version</span><span class="si">}</span><span class="s2">&#39; has been installed successfully&quot;</span><span class="p">)</span>
 
-    <span class="k">return</span> <span class="n">package_path</span></div>
+    <span class="k">return</span> <span class="n">package_path</span><span class="o">.</span><span class="n">resolve</span><span class="p">()</span></div>
 
 
 
