--- a/_modules/ramonak/stopwords.html
+++ b/_modules/ramonak/stopwords.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ramonak.stopwords &#8212; ramonak 0.4.0 documentation</title>
+    <title>ramonak.stopwords &#8212; ramonak 0.4.1 documentation</title>
   
   
   
@@ -38,7 +38,7 @@
   <link rel="preload" as="script" href="../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
 <link rel="preload" as="script" href="../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
-    <script src="../../_static/documentation_options.js?v=2375ead9"></script>
+    <script src="../../_static/documentation_options.js?v=988968c4"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
@@ -124,7 +124,7 @@
   
   
   
-    <p class="title logo__title">ramonak 0.4.0 documentation</p>
+    <p class="title logo__title">ramonak 0.4.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -252,7 +252,27 @@
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">ramonak.packages.actions</span><span class="w"> </span><span class="kn">import</span> <span class="n">require</span>
 
-<span class="n">STOP_WORDS</span> <span class="o">=</span> <span class="p">(</span><span class="n">require</span><span class="p">(</span><span class="s2">&quot;@alerus/stopwords&quot;</span><span class="p">)</span> <span class="o">/</span> <span class="s2">&quot;belarusian.txt&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">read_text</span><span class="p">(</span><span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
+<span class="n">_stop_words</span> <span class="o">=</span> <span class="kc">None</span>
+
+
+<div class="viewcode-block" id="get_stop_words">
+<a class="viewcode-back" href="../../ramonak.html#ramonak.stopwords.get_stop_words">[docs]</a>
+<span class="k">def</span><span class="w"> </span><span class="nf">get_stop_words</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Атрымаць спіс стоп-слоў.</span>
+
+<span class="sd">    Returns</span>
+<span class="sd">    -------</span>
+<span class="sd">    list[str]</span>
+<span class="sd">        спіс стоп-слоў</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="k">global</span> <span class="n">_stop_words</span>  <span class="c1"># noqa: PLW0603</span>
+
+    <span class="k">if</span> <span class="n">_stop_words</span><span class="p">:</span>
+        <span class="k">return</span> <span class="n">_stop_words</span>
+
+    <span class="n">_stop_words</span> <span class="o">=</span> <span class="p">(</span><span class="n">require</span><span class="p">(</span><span class="s2">&quot;@alerus/stopwords&quot;</span><span class="p">)</span> <span class="o">/</span> <span class="s2">&quot;belarusian.txt&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">read_text</span><span class="p">(</span><span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">_stop_words</span></div>
+
 
 
 <div class="viewcode-block" id="clean_stop_words">
@@ -286,7 +306,7 @@
             <span class="n">msg</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;Wrong type: </span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">data_word</span><span class="p">)</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s2">. Data must be str or an iterable with str&quot;</span>
             <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="n">data_word</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">STOP_WORDS</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">data_word</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">get_stop_words</span><span class="p">():</span>
             <span class="n">word_list</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">data_word</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">word_list</span></div>
