--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; ramonak 0.4.0 documentation</title>
+    <title>Index &#8212; ramonak 0.4.1 documentation</title>
   
   
   
@@ -38,7 +38,7 @@
   <link rel="preload" as="script" href="_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
-    <script src="_static/documentation_options.js?v=2375ead9"></script>
+    <script src="_static/documentation_options.js?v=988968c4"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
@@ -124,7 +124,7 @@
   
   
   
-    <p class="title logo__title">ramonak 0.4.0 documentation</p>
+    <p class="title logo__title">ramonak 0.4.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -252,6 +252,7 @@
  <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -287,6 +288,14 @@
       <li><a href="ramonak.html#ramonak.rules.fix_trailing_u_short">fix_trailing_u_short() (in module ramonak.rules)</a>
 </li>
       <li><a href="ramonak.stemmer.html#ramonak.stemmer.flexistat.FlexionStatStemmer">FlexionStatStemmer (class in ramonak.stemmer.flexistat)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ramonak.html#ramonak.stopwords.get_stop_words">get_stop_words() (in module ramonak.stopwords)</a>
 </li>
   </ul></td>
 </tr></table>
