--- a/_modules/ramonak/stemmer/flexistat.html
+++ b/_modules/ramonak/stemmer/flexistat.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ramonak.stemmer.flexistat &#8212; ramonak 0.4.2 documentation</title>
+    <title>ramonak.stemmer.flexistat &#8212; ramonak 0.4.3 documentation</title>
   
   
   
@@ -38,7 +38,7 @@
   <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
 <link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
-    <script src="../../../_static/documentation_options.js?v=8ffde8a2"></script>
+    <script src="../../../_static/documentation_options.js?v=34016abf"></script>
     <script src="../../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
@@ -124,7 +124,7 @@
   
   
   
-    <p class="title logo__title">ramonak 0.4.2 documentation</p>
+    <p class="title logo__title">ramonak 0.4.3 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -265,7 +265,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">flexions</span> <span class="o">=</span> <span class="p">[]</span>
 
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span>
-            <span class="n">flexistat_dir</span> <span class="o">/</span> <span class="s2">&quot;unchangeable_words.txt&quot;</span><span class="p">,</span>
+            <span class="n">flexistat_dir</span> <span class="o">/</span> <span class="s2">&quot;all_unchangeable.txt&quot;</span><span class="p">,</span>
             <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">,</span>
         <span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">unchangealbe_word</span> <span class="ow">in</span> <span class="n">f</span><span class="o">.</span><span class="n">readlines</span><span class="p">():</span>
@@ -275,7 +275,7 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">unchangeable_words</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">word</span><span class="p">)</span>
 
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span>
-            <span class="n">flexistat_dir</span> <span class="o">/</span> <span class="s2">&quot;flexions.txt&quot;</span><span class="p">,</span>
+            <span class="n">flexistat_dir</span> <span class="o">/</span> <span class="s2">&quot;all_flexions.txt&quot;</span><span class="p">,</span>
             <span class="n">encoding</span><span class="o">=</span><span class="s2">&quot;utf8&quot;</span><span class="p">,</span>
         <span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">file_flexion</span> <span class="ow">in</span> <span class="n">f</span><span class="o">.</span><span class="n">readlines</span><span class="p">():</span>
