deploy: 370a6ed9b6c862db50e1ccc646bb4c23b74ce770

--- a/_modules/ramonak/packages/actions.html
+++ b/_modules/ramonak/packages/actions.html
@@ -270,7 +270,7 @@
 <div class="viewcode-block" id="require">
 <a class="viewcode-back" href="../../../ramonak.packages.html#ramonak.packages.actions.require">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">require</span><span class="p">(</span><span class="n">package_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Path</span><span class="p">:</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Падключыць да кода пакет з дадзенымі. Калі гэтага пакета няма, ён будзе спампаваны.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Падключыць да кода пакет з дадзенымі. Калі гэтага пакета няма ў лакальным сховішчы, ён будзе спампаваны.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
